parametrage des routes sur le service gateway